# modelo_projetos_ds

./: README.md  TUTORIAL_NOVO_PROJETO.md  pyproject.toml  requirements.txt  test_ci_locally.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml  code-quality.yml  pr-analysis.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
reports/: metrics.json
scripts/: run_pipeline.py
src/: config.py  evaluate.py  features.py  inference.py  monitoring.py  preprocessing.py  train.py
tests/: test_evaluate.py  test_inference.py  test_inference_extended.py  test_interpret.py  test_monitoring.py  test_train.py
