[tool.poetry]
name = "modelo_projetos_ds"
version = "0.1.0"
description = "Data Science End-to-End Pipeline com MLflow"
authors = ["Gabriela <gabriela@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
xgboost = "^2.0"
mlflow = "2.22.4"
joblib = "^1.3"
scipy = "^1.11"
matplotlib = "^3.8"
seaborn = "^0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.11"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.7"
jupyter = "^1.0"
ipython = "^8.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
