[tool.poetry]
name = "modelo_projetos_ds"
version = "0.1.0"
description = "Data Science End-to-End Pipeline com MLflow"
authors = ["Gabriela <gabriela@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
xgboost = "^2.0"
mlflow = "2.22.4"
joblib = "^1.3"
scipy = "^1.11"
matplotlib = "^3.8"
seaborn = "^0.13"
shap = "^0.44"
streamlit = "^1.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
black = "^23.11"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.7"
jupyter = "^1.0"
ipython = "^8.17"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --disable-warnings"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
